Add connection watcher
